# deep-code-test-task

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  setup.cfg  task.md
.github/workflows/: ci.yml
telemetry_api/: config.py  main.py
telemetry_api/api/: __init__.py  analytics.py  devices.py  users.py
telemetry_api/api/v1/: analytics.py  devices.py  users.py
telemetry_api/database/: database.py  models.py
telemetry_api/schemas/: analytics.py  devices.py  users.py
telemetry_api/worker/: celery_app.py
telemetry_api/worker/tasks/: device_analytics.py
tests/: conftest.py  test_analytics.py  test_devices.py  test_users.py
