[tool.poetry]
name = "telemetry-api"
version = "0.0.0"
description = ""
authors = ["Kirill Volychev <volychevk@gmail.com>"]
readme = "README.md"
packages = [{include = "telemetry_api"}]

[tool.poetry.dependencies]
python = "^3.13.11"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
sqlalchemy = "^2.0.49"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
aiosqlite = "^0.22.1"
asyncpg = "^0.31.0"
greenlet = "^3.5.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
flake8-commas = "^2.1.0"
flake8-builtins = "^2.5.0"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.14.1"
reorder-python-imports = "^3.14.0"
autoflake = "^2.3.1"
setuptools = "^75.8.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
